[package]
edition      = "2024"
name         = "esp-blinky-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-blinky-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-storage = { version = "0.8.1", features = ["esp32c3"] }
sequential-storage = { version = "7.0.0", features = ["heapless"] }
minimq = "0.10.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = "1.1.3"
heapless = { version = "0.8.0", features = ["serde"] }
embassy-embedded-hal = "0.5.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
serde = "1.0.228"
serde_json = "1.0.148"
